--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US"> 
     <head>
         <meta charset="UTF-8">
-        <meta viewport="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spencer Normand Lowe | WDD 130</title>
     </head>
     <body>
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/"> Rafting Website</a>
-                <a href="wwr/site-plan-rafting.html"> Rafting Site Plan</a>
+                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             </nav> 
         </header>
         <main>
