--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <h1>Spencer Normand Lowe | WDD 130</h1>
             <img src="images/profile.jpeg" alt="Spencer Normand Lowe" width="200">
-            <p>I am a student at BYU-Idaho studying Software Engineering. I hope to use my degree to work in the tech industry as a back-end developer.</p>           
+            <p>I'm a husband and father pursuing a B.S.E @BYU-Idaho. Right now my time is spent juggling code, diapers, dinners, and mountain views in beautiful Utah State, USA.</p>           
         </main>
         <footer>
             <p>©️2024 | Spencer Lowe | USA</p>
