9/26/24 Title ammendment after page evaluation tool was ran

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holy Grail</title>
+    <title>Spencer Lowe | Holy Grail Layout Example</title>
     <meta name="description" content="This is a sample page demonstrating the Holy Grail layout.">
     <meta name="author" content="Spencer Lowe"> 
 </head>
