9/29 ,html filled with css styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spencer Normand Lowe | WDD 130</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <meta name="description" content="This is a landing page for my WDD130 class at BYU-I. It is my hope that you enjoy your time here.">
+        <meta name="author" content="Spencer Lowe">
     </head>
     <body>
         <header>
@@ -19,6 +21,11 @@
             <img src="images/profile.jpeg" alt="Spencer Normand Lowe" width="200">
             <p>I'm a husband and father pursuing a B.S.E @BYU-Idaho. Right now my time is spent juggling code, diapers, dinners, and mountain views in beautiful Utah State, USA.</p>           
         </main>
+        <aside>
+            <h2>United States of America</h2>
+            <img src ="images/usarep.jpg" alt="An image of the Declaration of Independence, a symbol of America.">
+            <p>The Declaration of Independence was adopted by the Continental Congress on July 4, 1776, marking the formal separation of the Thirteen Colonies from Great Britain. The signing primarily took place on August 2, 1776, at Independence Hall in Philadelphia, with 56 delegates representing the colonies. This pivotal event declared the colonies as “free and independent States,” laying the foundation for the United States of America.</p>
+        </aside>
         <footer>
             <p>©️2024 | Spencer Lowe | USA</p>
         </footer>
