--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Date Last Modified 9/30/24 -->
 <!DOCTYPE html>
 <html lang="en-US"> 
     <head>
@@ -14,14 +15,22 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://linkedin.com/in/spencerlowe87" target="_blank">LinkedIn</a>
+                <a href="https://facebook.com/walkingsaltine" target="_blank">Facebook</a>
             </nav> 
         </header>
         <main>
             <h1>Spencer Normand Lowe | WDD 130</h1>
             <img src="images/profile.jpeg" alt="Spencer Normand Lowe" width="200">
-            <p>I'm a husband and father pursuing a B.S.E @BYU-Idaho. Right now my time is spent juggling code, diapers, dinners, and mountain views in beautiful Utah State, USA.</p>           
+            <p>I'm a husband and father pursuing a B.S.E @BYU-Idaho. Right now my time is spent juggling code, diapers, dinners, and mountain views in beautiful Utah State, USA.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-utah-temple" target="_blank">Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/saratoga-springs-utah-temple" target="_blank">Saratoga Spring Temple</a></li>
+            </ul>
+            <br>
         </main>
-        <aside>
+        <aside class="box">
             <h2>United States of America</h2>
             <img src ="images/usarep.jpg" alt="An image of the Declaration of Independence, a symbol of America.">
             <p>The Declaration of Independence was adopted by the Continental Congress on July 4, 1776, marking the formal separation of the Thirteen Colonies from Great Britain. The signing primarily took place on August 2, 1776, at Independence Hall in Philadelphia, with 56 delegates representing the colonies. This pivotal event declared the colonies as “free and independent States,” laying the foundation for the United States of America.</p>
