--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
@@ -45,14 +46,14 @@
     <footer>
         <p>&copy; | 2024 | Spencer Lowe</p>
         <div>
-            <a href="https://www.facebook.com" target="_blank">
-            <img src="images/facebook-icon.png" alt="Facebook" style="width:24px;height:24px;">
+            <a href="https://www.facebook.com" target="_blank" class="no-underline">
+                <img src="images/facebook-icon.png" alt="Facebook" style="width:24px;height:24px;">
             </a>
-            <a href="https://www.X.com" target="_blank">
-            <img src="images/twitter-icon.png" alt="X" style="width:24px;height:24px;">
+            <a href="https://www.X.com" target="_blank" class="no-underline">
+                <img src="images/twitter-icon.png" alt="X" style="width:24px;height:24px;">
             </a>
-            <a href="https://www.instagram.com" target="_blank">
-            <img src="images/instagram-icon.png" alt="Instagram" style="width:24px;height:24px;">
+            <a href="https://www.instagram.com" target="_blank" class="no-underline">
+                <img src="images/instagram-icon.png" alt="Instagram" style="width:24px;height:24px;">
             </a>
         </div>
     </footer>
