--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="styles/rafting.css">
+    <meta name="description" content="Learn more about our white water rafting adventures and the history of our company.">
+    <meta name="author" content="Spencer Lowe">
 </head>
 <body>
     <header>
