--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <meta name="description" content="Learn more about our white water rafting adventures and the history of our company.">
     <meta name="author" content="Spencer Lowe">
+    <link rel="preconnect" href="https://fonts/googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>About Us</h1>
         <nav>
             <img src="images/logo.png" alt="Company Logo" style="width:50px;height:50px;">
-            <!-- Check this line of code-->
-            <ul style="list-style-type: none; padding: 0;">
-                 <!----> 
+
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="trips.html">Trips</a></li>
@@ -41,7 +42,7 @@
                     <img src="images/adventure1.webp" alt="Adventure Image 1" style="width:100%;height:auto;">
                     <img src="images/adventure2.webp" alt="Adventure Image 2" style="width:100%;height:auto;">
                     <img src="images/adventure3.webp" alt="Adventure Image 3" style="width:100%;height:auto;">
-                    <img src="images/adventure4.jpg" alt="Adventure Image 4" style="width:100%;height:auto;">
+                    <img src="images/adventure4.webp" alt="Adventure Image 4" style="width:100%;height:auto;">
                     <img src="images/adventure5.jpg" alt="Adventure Image 5" style="width:100%;height:auto;">
             </section>
     </main>
