remove all html styling and only do the styling in the css document

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
     <header>
         <h1>About Us</h1>
         <nav>
-            <img src="images/logo.png" alt="Company Logo" style="width:50px;height:50px;">
+            <img src="images/logo.png" alt="Company Logo">
 
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero.webp" alt="Hero Image" style="width:100%;height:auto;">
+            <img src="images/hero.webp" alt="Hero Image">
             <h1>White Water Rafting</h1>
             <article>
                 <h2>Experience the Thrill of a Lifetime</h2>
@@ -39,24 +39,24 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                    <img src="images/adventure1.webp" alt="Adventure Image 1" style="width:100%;height:auto;">
-                    <img src="images/adventure2.webp" alt="Adventure Image 2" style="width:100%;height:auto;">
-                    <img src="images/adventure3.webp" alt="Adventure Image 3" style="width:100%;height:auto;">
-                    <img src="images/adventure4.webp" alt="Adventure Image 4" style="width:100%;height:auto;">
-                    <img src="images/adventure5.jpg" alt="Adventure Image 5" style="width:100%;height:auto;">
+                    <img src="images/adventure1.webp" alt="Adventure Image 1">
+                    <img src="images/adventure2.webp" alt="Adventure Image 2">
+                    <img src="images/adventure3.webp" alt="Adventure Image 3">
+                    <img src="images/adventure4.webp" alt="Adventure Image 4">
+                    <img src="images/adventure5.jpg" alt="Adventure Image 5">
             </section>
     </main>
     <footer>
         <p>&copy; | 2024 | Spencer Lowe</p>
         <div>
             <a href="https://www.facebook.com" target="_blank" class="no-underline">
-                <img src="images/facebook-icon.png" alt="Facebook" style="width:24px;height:24px;">
+                <img src="images/facebook-icon.png" alt="Facebook">
             </a>
             <a href="https://www.X.com" target="_blank" class="no-underline">
-                <img src="images/twitter-icon.png" alt="X" style="width:24px;height:24px;">
+                <img src="images/twitter-icon.png" alt="X">
             </a>
             <a href="https://www.instagram.com" target="_blank" class="no-underline">
-                <img src="images/instagram-icon.png" alt="Instagram" style="width:24px;height:24px;">
+                <img src="images/instagram-icon.png" alt="Instagram">
             </a>
         </div>
     </footer>
