--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <meta name="description" content="Learn more about our white water rafting adventures and the history of our company.">
     <meta name="author" content="Spencer Lowe">
-    <link rel="preconnect" href="https://fonts/googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -33,21 +33,21 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
             </article>
         </div>
-            <section>
-                <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
-            </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                    <img src="images/adventure1.webp" alt="Adventure Image 1">
-                    <img src="images/adventure2.webp" alt="Adventure Image 2">
-                    <img src="images/adventure3.webp" alt="Adventure Image 3">
-                    <img src="images/adventure4.webp" alt="Adventure Image 4">
-                    <img src="images/adventure5.jpg" alt="Adventure Image 5">
-            </section>
+        <section>
+            <h2>History</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+        </section>
+        <section>
+            <h2>Adventure Awaits You!</h2>
+            <img src="images/adventure1.webp" alt="Adventure Image 1">
+            <img src="images/adventure2.webp" alt="Adventure Image 2">
+            <img src="images/adventure3.webp" alt="Adventure Image 3">
+            <img src="images/adventure4.webp" alt="Adventure Image 4">
+            <img src="images/adventure5.jpg" alt="Adventure Image 5">
+        </section>
     </main>
     <footer>
-        <p>&copy; | 2024 | Spencer Lowe</p>
+        <p>&copy; 2024 | Spencer Lowe</p>
         <div>
             <a href="https://www.facebook.com" target="_blank" class="no-underline">
                 <img src="images/facebook-icon.png" alt="Facebook">
